Fixed overflow text issue and colored the app

--- a/static/style.css
+++ b/static/style.css
@@ -1,15 +1,32 @@
 * {
     font-family:-apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    color: rgb(221, 220, 220)
 }
 body{
     display: flex;
     flex-direction: column;
     justify-content: center;
+    background-color: rgba(1, 22, 31, 0.931);
 }
 
 h1{
     display: flex;
     justify-content: center;
+}
+
+.text {
+    width: 30%;
+    margin-right: 0.5em;
+    margin-left:0.2em;
+}
+.date-input {
+    margin-left:0.2em;
+    margin-right:0.2em;
+}
+.submit {
+    border: none;
+    border-radius: 5px;
+    background-color: rgba(218, 165, 32, 0.808);
 }
 
 .todo-container, .cards-container {
@@ -21,29 +38,37 @@ h1{
 .cards-container {
     display: grid;
     justify-content: center;
-    row-gap: 0.5em;
+    row-gap: 1em;
 }
 
 .todo-container div {
     display: flex;
     justify-content: center;
-    border: 1px solid black;
-    padding: 1em;
+    padding: 0.5em;
 }
 
 .todo {
     align-self: center;
     border-radius: 5px;
-    width: 70%
+    width: 50%;
+    overflow: hidden;
+    background-color: rgba(255, 166, 0, 0.308);
 }
 
 .todo div {
     border: none;
-    overflow: hidden;
 }
 
-.todo div:hover {
+.text-box {
+    overflow: hidden;
+    height: 0.7em;
+    width: 70%;
+    margin: 0;
+    align-content: center;
+}
+.text-box:hover {
     border: none;
+    height: auto;
     overflow: visible;
 }
 
@@ -53,7 +78,19 @@ h1{
     height: 40px;
     border: none;
     border-radius: 100px;
-    background-color: rgb(96, 185, 118);
+    background-color: rgba(80, 165, 101, 0.794);
     cursor: pointer;
 
+}
+.date-box {
+    align-items: center;
+    font-size: 0.8em;
+}
+
+input {
+    color: black;
+    background-color:rgb(228, 228, 228);
+    border: none;
+    border-radius: 5px;
+    padding: 0.3em;
 }
